manifests/observability/metrics/test.yaml
kind: Service
apiVersion: v1
metadata:
  name: monitoring-sample
  namespace: bookinfo
  labels:
    app: monitoring-sample
spec:
  selector:
    app: monitoring-sample
  ports:
  - name: web
    port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: monitoring-sample
  namespace: bookinfo
  labels:
    app: monitoring-sample
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: monitoring-sample
      mountPath: /etc/nginx
      readOnly: true
  volumes:
  - name: monitoring-sample
    configMap:
      name: monitoring-sample
