manifests/observability/metrics/prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: prometheus
    app.kubernetes.io/name: prometheus
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: prometheus-operated
      port:
        number: 9090
